RESOLVED FIXED139080
[WK2] SecComp buildfix after r168605 and r168999
https://bugs.webkit.org/show_bug.cgi?id=139080
Summary [WK2] SecComp buildfix after r168605 and r168999
Csaba Osztrogonác
Reported 2014-11-27 13:36:33 PST
https://trac.webkit.org/changeset/168605 removed localStorageDirectory from WebProcessCreationParameters and https://trac.webkit.org/changeset/168999 renamed databaseDirectory to webSQLDatabaseDirectory. ../../Source/WebKit2/Shared/linux/SeccompFilters/SyscallPolicy.cpp:121:21: error: no member named 'databaseDirectory' in 'WebKit::WebProcessCreationParameters' if (!parameters.databaseDirectory.isEmpty()) ~~~~~~~~~~ ^ ../../Source/WebKit2/Shared/linux/SeccompFilters/SyscallPolicy.cpp:122:63: error: no member named 'databaseDirectory' in 'WebKit::WebProcessCreationParameters' addDirectoryPermission(removeTrailingSlash(parameters.databaseDirectory), ReadAndWrite); ~~~~~~~~~~ ^ ../../Source/WebKit2/Shared/linux/SeccompFilters/SyscallPolicy.cpp:123:21: error: no member named 'localStorageDirectory' in 'WebKit::WebProcessCreationParameters'; did you mean 'cookieStorageDirectory'? if (!parameters.localStorageDirectory.isEmpty()) ^~~~~~~~~~~~~~~~~~~~~ cookieStorageDirectory ../../Source/WebKit2/Shared/WebProcessCreationParameters.h:73:12: note: 'cookieStorageDirectory' declared here String cookieStorageDirectory; ^ ../../Source/WebKit2/Shared/linux/SeccompFilters/SyscallPolicy.cpp:124:63: error: no member named 'localStorageDirectory' in 'WebKit::WebProcessCreationParameters'; did you mean 'cookieStorageDirectory'? addDirectoryPermission(removeTrailingSlash(parameters.localStorageDirectory), ReadAndWrite); ^~~~~~~~~~~~~~~~~~~~~ cookieStorageDirectory ../../Source/WebKit2/Shared/WebProcessCreationParameters.h:73:12: note: 'cookieStorageDirectory' declared here String cookieStorageDirectory; ^ 1 warning and 4 errors generated.
Attachments
Patch (2.01 KB, patch)
2014-11-27 13:44 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2014-11-27 13:44:35 PST
WebKit Commit Bot
Comment 2 2014-11-28 01:04:01 PST
Comment on attachment 242257 [details] Patch Clearing flags on attachment: 242257 Committed r176557: <http://trac.webkit.org/changeset/176557>
WebKit Commit Bot
Comment 3 2014-11-28 01:04:06 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.