[WK2] SecComp buildfix after r168605 and r168999 https://bugs.webkit.org/show_bug.cgi?id=139080

Reviewed by Carlos Garcia Campos.

* Shared/linux/SeccompFilters/SyscallPolicy.cpp:
(WebKit::SyscallPolicy::addDefaultWebProcessPolicy):


Canonical link: https://commits.webkit.org/156936@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176557 268f45cc-cd09-0410-ab3c-d52691b4dbfc